--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 
 <main>
     <h2>Mira nuestros productos principales</h2>
+    <h2>Cambio para el commit</h2>
     <div class="filtro-productos">
         <!-- INPUTS -->
         <input type="radio" name="seleccionado" id="remeras">
