--- a/pages/PSEUDO.html
+++ b/pages/PSEUDO.html
@@ -8,13 +8,13 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
+    <header class="header">
         <a href="index.html">
             <img src="../img/logo-coderhouse.png" alt="Logo Coderhouse" class="logo">
         </a>
     
         <nav>
-            <ul class="menu-nav">
+            <ul class="header__menu">
                 <li>
                     <a href="../index.html">Inicio</a>
                 </li>
