actualizando el nav

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </li>
             
             <li>
-                <a href="#">Enlace</a>
+                <a href="pages/github.html">Github</a>
             </li>            
         </ul>
     </nav>
