--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -28,11 +28,11 @@
                 </li>
                 
                 <li>
-                    <a href="#">Enlace</a>
+                    <a href="boostrap.html">Boostrap</a>
                 </li>
                 
                 <li>
-                    <a href="#">Enlace</a>
+                    <a href="pages/github.html">Github</a>
                 </li>            
             </ul>
         </nav>
