--- a/pages/PSEUDO.html
+++ b/pages/PSEUDO.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="index.html">
+        <a href="../index.html">
             <img src="../img/logo-coderhouse.png" alt="Logo Coderhouse" class="logo">
         </a>
     
