--- a/pages/boostrap.html
+++ b/pages/boostrap.html
@@ -17,7 +17,7 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">
-                <a href="index.html">
+                <a href="../index.html">
                     <img src="../img/logo-coderhouse.png" alt="Logo Coderhouse" class="header__logo"><!-- BLOQUE + ELEMENTO-->
                 </a>
               </a>
