--- a/pages/github.html
+++ b/pages/github.html
@@ -17,7 +17,7 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">
-                <a href="index.html">
+                <a href="../index.html">
                     <img src="../img/logo-coderhouse.png" alt="Logo Coderhouse" class="header__logo"><!-- BLOQUE + ELEMENTO-->
                 </a>
               </a>
@@ -27,7 +27,7 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../index.html">Incio</a>
+                    <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="PSEUDO.html">Pseudo</a>
